[package]
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
name = "lablog_store"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
serde = "1.0.17"
serde_derive = "1.0.17"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.4.0"
