[package]
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
name = "lablog_store_csv"
version = "0.1.0"

[dependencies]
csv = "1.0.0-beta.5"
log = "0.3.8"
walkdir = "2.0.1"

[dependencies.lablog_store]
path = "../store"

[dev-dependencies]
tempdir = "0.3.5"

[dev-dependencies.chrono]
features = ["serde"]
version = "0.4.0"
